# hoas-hs

./: .ghci  .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  hoas-hs.cabal  hs-dual.cabal  shell.nix
.github/workflows/: ci.yml
app/: Main.hs
src/: AEnH.hs  LMM.hs  MyLib.hs  PHOAS.hs  UTLC.hs  UTLCext.hs
src/Bound/: NestedDT.hs  NestedDT1.hs  NestedDT2.hs  Try.hs
src/HOAS/: Core.hs  Reduction.hs
test/: ComprehensiveFunTest.hs  Main.hs  ShowDifference.hs  TestFocusing.hs  Test_LMM.hs
