cabal-version:      3.4
name:               hoas-hs
version:            5.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Linyu Yang
maintainer:         yly1228@foxmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
        UTLC
        UTLCext
        LMM
        AEnH
    other-modules:
        PHOAS
    -- other-extensions:
    build-depends:
        base, containers, transformers, mtl,
        megaparsec, prettyprinter, prettyprinter-ansi-terminal, haskeline
    hs-source-dirs:   src
    default-language: Haskell2010

executable hoas-hs
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        hoas-hs

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hoas-hs-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    Test_LMM
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        hoas-hs,
        mtl
